# LLVMLearningRepo

FrmCookBookTrials/1_LLVMDesignUse/: clangHelper.txt  optHelper.txt  testfile.ll
FrmCookBookTrials/Ch5_PreparingOptimizations/: 4_CountBasicBlocksHelper.c
MyLLVMPass/: CMakeLists.txt
MyLLVMPass/src/: MyPass.cpp  MyRandomCFile.cpp
WithNewPM/: CMakeLists.txt
WithNewPM/src/: func_lister.cpp
